T3/wp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deployment
  namespace: task3
  labels:
    app: wp-app
    tier: frontend
    component: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-app
      tier: frontend
      component: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wp-app
        tier: frontend
        component: wordpress
    spec:
      containers:
      - name: wp-app-cont
        image: wordpress:6.7.1-apache
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: wp-pv
          mountPath: /var/www/html
      volumes:
      - name: wp-pv
        persistentVolumeClaim:
          claimName: wp-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wp-service
  namespace: task3
  labels:
    app: wp-app
    tier: frontend
    component: wordpress
spec:
  type: ClusterIP
  selector:
    app: wp-app
    tier: frontend
    component: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
