T3/wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  namespace: task3
  labels:
    app: wp-app
    tier: frontend
    component: wordpress
  annotations:
    # kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "ssl-28-04-25"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    # appgw.ingress.kubernetes.io/rule-priority: "100"        # Will not work with SSL Redirect = True
    appgw.ingress.kubernetes.io/health-probe-hostname: "wordpress.i2d.work.gd"
    # appgw.ingress.kubernetes.io/health-probe-port: "80"
    # appgw.ingress.kubernetes.io/health-probe-path: "/"
    appgw.ingress.kubernetes.io/health-probe-status-codes: "100-599"
    # appgw.ingress.kubernetes.io/health-probe-interval: 30
    # appgw.ingress.kubernetes.io/health-probe-timeout: 30
    # appgw.ingress.kubernetes.io/health-probe-unhealthy-threshold: 3
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-service
            port:
              number: 80
    host: wordpress.i2d.work.gd
